--- a/firebase.json
+++ b/firebase.json
@@ -2,5 +2,19 @@
   "firestore": {
     "rules": "firebase-rules",
     "indexes": "firestore.indexes.json"
+  },
+  "hosting": {
+    "public": "build",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ],
+    "rewrites": [
+      {
+        "source": "**",
+        "destination": "/index.html"
+      }
+    ]
   }
 }
